# cpp_template

./: .gitignore  README.md
cpp_proj/templates/: CMakeLists.txt  ycm_extra_conf.py
cpp_proj/templates/app/: CMakeLists.txt  main.cpp
cpp_proj/templates/docs/: CMakeLists.txt  mainpage.md
cpp_proj/templates/include/lib/: lib.h
cpp_proj/templates/include/lib/controller/: sample_controller.h
cpp_proj/templates/include/lib/db/: sample_repository.h
cpp_proj/templates/include/lib/entities/: sample_interactor_request.h  sample_interactor_response.h
cpp_proj/templates/include/lib/presenter/: sample_presenter.h
cpp_proj/templates/include/lib/use_cases/: i_sample_interactor_input.h  i_sample_interactor_output.h  i_sample_repository.h  sample_interactor.h
cpp_proj/templates/src/: CMakeLists.txt
cpp_proj/templates/src/lib/: lib.cpp
cpp_proj/templates/src/lib/controller/: sample_controller.cpp
cpp_proj/templates/src/lib/presenter/: sample_presenter.cpp
cpp_proj/templates/src/lib/use_cases/: sample_interactor.cpp
cpp_proj/templates/tests/: CMakeLists.txt  test1.cpp  test2.cpp  test_basic.cpp  test_lib.cpp
cpp_proj/templates/tests/lib/use_cases/: test_sample_interactor.cpp
cpp_template/: __main__.py
